@@ -81,7 +81,9 @@ version ?.??.?? (????-??-??):
   - added delivery status notification support for mail messages [chilan]
   - invoice sends are optionally confirmed by new messages [chilan]
   - added mail disposition notification support for mail messages [chilan]
-  
+  - added support for DSN, MDN and Reply-To header in phpmailer backend
+    (DSN required separated patch for PHPMailer code) [chilan]
+
 version 1.11.19 (2015-12-21):
 
   - updated lms swekey code to be conformed with PHP 7 [prezes_kk]
